<?xml version="1.0"?>
<package format="2">

  <name>mas_factor</name>
  <version>1.0.0</version>
  <description>Motor Angular Speed Factor package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <author>Matej Petrlik</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>geometry_msgs</depend>

  <depend>GTSAM</depend>

</package>
